--- a/css/proj.css
+++ b/css/proj.css
@@ -1,10 +1,9 @@
 #openproj{
     position: fixed;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
-    overflow-y: scroll;
+    overflow-y: scroll !important;
     overflow-x: hidden;
-    -webkit-overflow-scrolling: touch;
     margin-left: calc(100vw - 100%);
     margin-right: 0;
     z-index: 1500;
@@ -12,10 +11,18 @@
     opacity: 0;
     background: linear-gradient(90deg, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
     color:white;
-}
-#openproj h2{
+  }
+  #open-cont{
+    padding: 4% 4%;
+  }
+#open-cont h2{
     font-size: 2em;
     text-transform: uppercase;
+    margin: 2% 0;
+  }
+  #open-cont p{
+    font-size: 1.3em;
+    width: 80%;
   }
 .close {
     position: absolute;
@@ -23,7 +30,7 @@
     top: 32px;
     width: 32px;
     height: 32px;
-    opacity: 0.3;
+    opacity: 0.9;
   }
   .close:hover {
     opacity: 1;
@@ -34,7 +41,7 @@
     left: 15px;
     content: ' ';
     height: 33px;
-    width: 2px;
+    width: 4px;
     background-color: #fff;
   }
   .close:before {
@@ -43,3 +50,76 @@
   .close:after {
     transform: rotate(-45deg);
   }
+  #projeto-conteudo{
+    margin-top: 5%;
+    column-gap:15px;
+    display:flex;
+  }
+  #carousel-cont {
+    width:60%;
+  }
+  #text-cont{
+    width: 40%;
+  }
+  #text-cont h3{
+    font-size: 1.3em;
+  }
+  .url {
+    font-size: 1.3em;
+    color:white;
+    text-decoration: underline;
+    margin-top:5%;
+
+  }
+  .url:hover{
+    cursor: pointer;
+  }
+
+  #carousel-cont{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+  }
+  #carousel{
+    widows: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+
+  }
+  .mySlides {
+    display: none;
+    max-width:100%;
+   
+  }
+  .mySlides img{
+    background-color: white;
+    object-fit: scale-down;
+    height: 60vh;
+    max-width: 100%;
+  }
+  .prev, .next {
+    cursor: pointer;
+    padding: 8px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+    border-radius: 3px 0 0 3px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover, .next:hover {
+    background-image: linear-gradient(rgba(0, 0, 255, 0.5), rgba(0, 0, 255, 0.5));
+  }
+
+  
