--- a/css/reset.css
+++ b/css/reset.css
@@ -22,6 +22,8 @@ time, mark, audio, video {
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
     display: block;
+    line-height: 1.5;
+
 }
 body {
     line-height: 1;
