--- a/css/proj.css
+++ b/css/proj.css
@@ -65,14 +65,18 @@
     font-size: 1.3em;
   }
   .url {
+    font-family: Strawford-Regular;
     font-size: 1.3em;
     color:white;
     text-decoration: underline;
     margin-top:5%;
 
+
   }
   .url:hover{
     cursor: pointer;
+    text-shadow: 0px 0px 1px #ffff;transition: 0.3s;
+
   }
 
   #carousel-cont{
@@ -121,5 +125,9 @@
   .prev:hover, .next:hover {
     background-image: linear-gradient(rgba(0, 0, 255, 0.5), rgba(0, 0, 255, 0.5));
   }
+#cont-url{
+  display: flex;
+  flex-direction: column;
+}
 
   
